--- a/mc.cfg
+++ b/mc.cfg
@@ -1,7 +1,6 @@
-# Minecraft 游戏窗口名，例如：Minecraft 1.12.2
-MC_NAME=""
+MC_NAME='Minecraft 1.14.4'
 
 # xinput list --name-only 
 # 显示的需要禁用的鼠标
-MOUSE=""
+MOUSE="Logitech USB Optical Mouse"
 
